Set search input focus when clicking search icon; fix search clear alignment
Fixes #582
Fixes #588

--- a/src/styles/landing-page.less
+++ b/src/styles/landing-page.less
@@ -82,6 +82,9 @@
       text-align: center;
     }
   }
+  .search-pf .has-clear .clear {
+    height: 29px;
+  }
   .search-pf-input-group {
     .form-control {
       font-size: (@font-size-base + 2);
@@ -89,7 +92,6 @@
     }
     .pficon-close {
       font-size: (@font-size-base + 4);
-      margin-top: -0.3em;
     }
   }
 }
